2011-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (EmitMessage): Treat an unhandled EXP marker as a
	warning rather than a hard error.  Resolves SourceForge issue
	3297995 "Unsupported marker type 0xdf".

2011-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (AppendImages): If the input list only contains
	one image, then return a new handle to the one image in the list
	rather than reporting an exception.  Problem was reported by Ravil
	Rakhimgulov ("Hunter1972").

2011-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageColorRegion): New function to set the
	constant pixel color for a specified region of the image.
	(AppendImages): Only color background pixels when needed.

2011-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Added TIFF writer support for
	JBIG1 compression.  Not proven to work yet.

	* magick/image.h (CompressionType): Added Group3Compression as an
	alias for already existing FaxCompression.  Added
	JPEG2000Compression, JBIG1Compression, and JBIG2Compression for
	future use.

2011-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: For MinGW32 use 64-bit value formatting
	conventions which will work with any version of the WIN32 CRT.

2011-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Properly handle errors reported
	by the JPEG library when writing.  Up to now, JPEG library simply
	invoked exit(), which crashed or hung if driven by Magick++ API.
	Fixes SourceForge bug 3106947 "Assertion failure when saving an
	"invalid" image as JPEG".

	* magick/module.c (ModuleAliases): Delete "XTRNBSTR"-entry. Fix by
	Stefan Graff.

	* contrib/win32/ATL7/ImageMagickObject/ImageMagickObject.cpp
	(Perform): Member "Perform" - out-commented SafeArrayAccessData
	and following SafeArrayUnaccessData. Fix by Stefan Graff.
