@@ -102,7 +102,7 @@ MagickPassFail HaldClutImage( <a class="reference external" href="../api/types.h
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2011-02-20 02:31 UTC.
+Generated on: 2011-05-07 22:52 UTC.
 
 </div>
 </body>
